--- a/arrow-keys.html
+++ b/arrow-keys.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-      <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Khand:700'>
+      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Khand:700'>
 
       <style>
          body {
