--- a/wheel.html
+++ b/wheel.html
@@ -139,7 +139,7 @@
                CURRENT_SECTION -= 1;
                navigateToCurrentSection();
             } else {
-               shiftToAccumulatedScroll();
+               transitionToAccumulated();
 
                if (TIMER_ID != null) {
                   clearTimeout(TIMER_ID);
@@ -153,7 +153,7 @@
             }
          });
 
-         var shiftToAccumulatedScroll = function() {
+         var transitionToAccumulated = function() {
             var height = $(window).height();
 
             var switchDistance = height * HEIGHT_RATIO;
